--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "barryvdh/laravel-debugbar": "^2.3",
-        "enshrined/svg-sanitize": "^0.4.1"
+        "enshrined/svg-sanitize": "^0.4.1",
+        "jangobrick/php-svg": "^0.5.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
